--- a/CodeForGood/css/header_footer/style1.css
+++ b/CodeForGood/css/header_footer/style1.css
@@ -87,7 +87,7 @@ margin-left:5px;
     // margin: 5px 10px;  
     //height: 129px;
     //border: 1px solid ;
-	background-color:black;
+	background-color:#FF7701;
 }
 .dev:hover{
 	font-weight:bold;
