--- a/CodeForGood/css2/parallaxcss.css
+++ b/CodeForGood/css2/parallaxcss.css
@@ -12,7 +12,7 @@
  **/
 @font-face {
     font-family: greatvibes;
-    src: url(font/GreatVibes-Regular);
+    src: url(font/GreatVibes-Regular.otf);
 }
 
 *,
@@ -22,6 +22,12 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+}
+#footer {
+
+  bottom: 0px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 html,
@@ -132,7 +138,7 @@ body > section > div:nth-child(2)
 h2
 {
 	padding:30px;
-	background-color:rgba(255,255,255,0.5);
+	background-color:rgba(0,0,0,0.5);
 	font-family:greatvibes;
 	
 }
